# martins-okorie-ttb-label-verification

./: .env.example  .gitignore  README.md  render.yaml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  comparison.py  main.py  models.py  settings.py  vision.py
backend/scripts/: measure_live_verify.py  run_sample_vision.py
backend/tests/: test_api.py  test_comparison.py  test_vision.py
docs/: verification-checklist.md
frontend/: app.js  app.smoke.test.mjs  build-config.mjs  config.example.js  config.js  index.html  package-lock.json  package.json  styles.css  vercel.json
issues/: live-smoke-test-coverage.md  public-deployment-and-secret-history.md  readme-demonstration-requirements.md  unified-upload-flow-and-batch-safety.md  vision-comparison-robustness.md
scripts/: live_checklist.py
